<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.ucsb.cs.cs185.harshitha.keepscore.MainActivity"
    android:configChanges="orientation"

    android:weightSum="1">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EnterDate"
        android:id="@+id/EnterDate"
        style="?android:attr/borderlessButtonStyle"
        android:textStyle="bold"
        android:textColor="@color/lightBlue"
        android:textSize="35dp"
        android:fontFamily="sans-serif-medium"
        android:textAllCaps="false"
        android:onClick="submitDate"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.47" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Team1"
        android:id="@+id/team1"
        style="?android:attr/borderlessButtonStyle"
        android:textColor="@color/lightBlue"
        android:textSize="35dp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"
        android:textAllCaps="false"
        android:onClick="onSetTask"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vs"
        android:id="@+id/vs"
        android:textColor="@color/lightBlue"
        android:textSize="35dp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"
        android:textAllCaps="false"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Team2"
        android:id="@+id/team2"

        style="?android:attr/borderlessButtonStyle"
        android:textColor="@color/lightBlue"
        android:textSize="35dp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"
        android:textAllCaps="false"
        android:onClick="onSetTask2"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NextGame"
        android:id="@+id/nextGame"
        style="?android:attr/borderlessButtonStyle"
        android:textColor="@color/lightBlue"
        android:textStyle="bold"
        android:textSize="35dp"
        android:fontFamily="sans-serif-medium"
        android:textAllCaps="false"
        android:layout_gravity="center_horizontal"
        android:onClick="nextGameSubmit"
        android:layout_weight="0.35" />
</LinearLayout>
